2000-08-13  Bart Schaefer  <schaefer@zsh.org>

	* 12601: aczsh.m4, configure.in: configure --enable-cflags and the
	like, i.e., with no =... part, should preserve the environment
	values for CFLAGS etc. rather than erase them.

2000-08-11  Peter Stephenson  <pws@csr.com>

	* 12598: INSTALL, aczsh.m4, configure.in: --enable-cppflags=...,
	--enable-cflags=..., --enable-ldflags=..., --enable-libs=...

2000-08-11  Bart Schaefer  <schaefer@zsh.org>

	* 12596: INSTALL: Update for module aliasing changes.

2000-08-11  Sven Wischnowsky  <wischnow@zsh.org>

	* 12592: Completion/Core/_parameters, Src/Zle/compcore.c,
 	Src/Zle/zle_tricky.c: fixes for completion in math contexts: don't
 	quote spaces and do normal parameter expansion completion after `$'
	
2000-08-11  Peter Stephenson  <pws@csr.com>

	* Config/version.mk: 3.1.9-dev-5.

2000-08-10  Oliver Kiddle  <opk@zsh.org>

	* 12585: Doc/Zsh/compsys.yo, Doc/Zsh/compwid.yo, Doc/Zsh/expn.yo,
	Doc/Zsh/mod_complist.yo, Doc/Zsh/mod_zutil.yo: minor doc fixes

	* 12583: Completion/Base/_math, Completion/Builtins/_arrays,
	Completion/Builtins/_vars, Completion/Builtins/_zpty,
	Completion/Commands/_bash_completions, Completion/Core/_parameters,
	Doc/Zsh/compsys.yo: add -g option to _parameters to restrict the
	type of parameters completed

2000-08-10  Peter Stephenson  <pws@csr.com>

	* 12582: Misc/Functions/is-at-least: make it accept name
	parts in the first argument (though I forgot to handle things
	like 3.1.6.random3 with no separator).

	* 12581: Doc/Zsh/options.yo, Src/options.c, Src/params.c,
	Src/zsh.h: Add C_BASES option to output hexadecimal as 0xFF
	instead of 16#FF, and similarly for octal if OCTAL_ZEROES is set.

2000-08-09  Oliver Kiddle  <opk@zsh.org>

	* 12578: Completion/Builtins/_read, Completion/Builtins/_vars,
	Completion/Builtins/.distfiles: new completion for read builtin

2000-08-08  Clint Adams  <schizo@debian.org>

	* 12568: configure.in, Src/compat.c, Src/exec.c, Src/init.c,