@@ -1,5 +1,10 @@
 2000-08-13  Bart Schaefer  <schaefer@zsh.org>
 
+	* 12604: Src/compat.c, Src/system.h, Src/Modules/files.c,
+	Src/Modules/parameter.c: Remove calls to zpathmax(); fix some
+	serious errors in zpathmax() but wrap it in #if 0 anyway; minor
+	fixes to comments and coding style for zopenmax().
+
 	* 12601: aczsh.m4, configure.in: configure --enable-cflags and the
 	like, i.e., with no =... part, should preserve the environment
 	values for CFLAGS etc. rather than erase them.
